--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
-# Created by https://www.gitignore.io/api/visualstudiocode
-# Edit at https://www.gitignore.io/?templates=visualstudiocode
-
-### VisualStudioCode ###
 .vscode/
-
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-**/.history
-
-# End of https://www.gitignore.io/api/visualstudiocode
+.DS_Store
